cleanup, only require initials for entra login path